--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,7 @@
                         <th>Род груза</th>
                         <th>ИНН</th>
                         <th>КПП</th>
-                        <th>Статус от объекта 1</th>
-                        <th>Статус от объекта 2</th>
+                        <th>Статус отправки</th>
                         <th>Дата отправки</th>
                     </tr>
                 </thead>
@@ -60,7 +59,6 @@
                         <td>{{ row[10] }}</td>
                         <td>{{ row[11] }}</td>
                         <td>{{ row[12] }}</td>
-                        <td>{{ row[13] }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
